cli/tests/testdata/test/no_check.out
error: Uncaught TypeError: Cannot read property 'fn' of undefined
Deno.test();
     ^
    at [WILDCARD]
    at [WILDCARD]/test/no_check.ts:1:6
